--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,13 @@
 		<dependency>
 			<groupId>org.jpmml</groupId>
 			<artifactId>jpmml-sklearn</artifactId>
-			<version>1.6.3</version>
+			<version>1.6.4</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jpmml</groupId>
+					<artifactId>pmml-agent</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
