Updated JPMML-Python dependency

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,22 @@
 					<groupId>org.jpmml</groupId>
 					<artifactId>pmml-agent</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.jpmml</groupId>
+					<artifactId>jpmml-python</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jpmml</groupId>
+			<artifactId>jpmml-python</artifactId>
+			<version>1.0.23</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jpmml</groupId>
+					<artifactId>pmml-agent</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 	</dependencies>
