--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: [3.7, 3.8, 3.9, 3.10]
+        python: [3.7, 3.8, 3.9, '3.10']
         sklearn: [0.23.2, 0.24.2, 1.0.2]
 
     steps:
