--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -11,8 +11,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: [3.7, 3.8, 3.9]
-        sklearn: [0.23.2, 0.24.2, 1.0.2]
+        python: [3.7, 3.8, 3.9, '3.10']
+        sklearn: [0.22.2, 0.23.2, 0.24.2, 1.0.2]
+        exclude:
+          - python: 3.9
+            sklearn: 0.23.2
 
     steps:
     - uses: actions/checkout@v2
