--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ numpy==1.21.5
 optbinning==0.17.2
 pandas==1.3.5
 scikit-learn
+scikit-lego==0.6.12
 sklearn-pandas==2.2.0
 statsmodels==0.13.5
 TPOT==0.11.7
