--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -11,14 +11,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: [3.7, 3.8, 3.9, '3.10']
-        sklearn: [0.22.2, 0.23.2, 0.24.2, 1.0.2]
-        exclude:
-          - python: 3.9
-            sklearn: 0.22.2
-          - python: 3.9
-            sklearn: 0.23.2
-          - python: '3.10'
+        python: [3.8, 3.9, '3.10']
+        sklearn: [1.0.2, 1.1.3, 1.2.2, 1.3.2]
 
     steps:
     - uses: actions/checkout@v2
