--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -13,6 +13,8 @@ jobs:
       matrix:
         python: [3.8, 3.9, '3.10']
         sklearn: [1.0.2, 1.1.3, 1.2.2, 1.3.2]
+        exclude:
+          - python: '3.10'
 
     steps:
     - uses: actions/checkout@v2
