--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         python: [3.8, 3.9, '3.10']
-        sklearn: [1.0.2, 1.1.3, 1.2.2, 1.3.2]
+        sklearn: [1.0.2, 1.1.3, 1.2.2, 1.3.2, '1.4.0']
         exclude:
           - python: '3.10'
 
