--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -14,6 +14,8 @@ jobs:
         python: [3.8, 3.9, '3.10']
         sklearn: [1.0.2, 1.1.3, 1.2.2, 1.3.2, '1.4.0']
         exclude:
+          - python: 3.8
+            sklearn: '1.4.0'
           - python: '3.10'
 
     steps:
