--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 
 	<properties>
 		<jpmml-sklearn.version>1.7.54</jpmml-sklearn.version>
+		<project.build.outputTimestamp>2024-03-24T10:40:19Z</project.build.outputTimestamp>
 	</properties>
 
 	<dependencies>
@@ -105,7 +106,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.12.1</version>
+				<version>3.13.0</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
