--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ optbinning==0.19.0
 pandas==1.5.3
 scikit-learn
 scikit-lego==0.7.4
+scikit-tree==0.7.2
 sklearn-pandas==2.2.0
 statsmodels==0.14.1
 TPOT==0.12.0
