--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ dill==0.3.6
 joblib==1.3.1
 lightgbm==4.3.0
 lxml==5.1.0
-numpy==1.22.4
+numpy==1.22.4; python_version == '3.8'
+numpy==1.26.4; python_version >= '3.9'
 optbinning==0.19.0
 pandas==1.5.3
 scikit-learn
