--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
 			<groupId>org.jpmml</groupId>
 			<artifactId>pmml-sklearn</artifactId>
 			<version>${jpmml-sklearn.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jpmml</groupId>
+					<artifactId>pmml-python-testing</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.jpmml</groupId>
@@ -52,21 +58,45 @@
 			<groupId>org.jpmml</groupId>
 			<artifactId>pmml-sklearn-h2o</artifactId>
 			<version>${jpmml-sklearn.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jpmml</groupId>
+					<artifactId>pmml-converter-testing</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.jpmml</groupId>
 			<artifactId>pmml-sklearn-lightgbm</artifactId>
 			<version>${jpmml-sklearn.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jpmml</groupId>
+					<artifactId>pmml-converter-testing</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.jpmml</groupId>
 			<artifactId>pmml-sklearn-statsmodels</artifactId>
 			<version>${jpmml-sklearn.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jpmml</groupId>
+					<artifactId>pmml-python-testing</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.jpmml</groupId>
 			<artifactId>pmml-sklearn-xgboost</artifactId>
 			<version>${jpmml-sklearn.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jpmml</groupId>
+					<artifactId>pmml-converter-testing</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -114,23 +144,6 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.7.1</version>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>generate-resources</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.basedir}/sklearn2pmml/resources</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
 				<version>3.5.0</version>
 				<executions>
@@ -163,27 +176,17 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.3.1</version>
+				<groupId>org.jpmml</groupId>
+				<artifactId>packager-maven-plugin</artifactId>
+				<version>1.0.0</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
 						<goals>
-							<goal>copy-resources</goal>
+							<goal>create-classpath</goal>
 						</goals>
 						<configuration>
-							<encoding>UTF-8</encoding>
 							<outputDirectory>${project.basedir}/sklearn2pmml/resources</outputDirectory>
-							<resources>
-								<resource>
-									<directory>${project.basedir}/target</directory>
-									<includes>
-										<include>${project.build.finalName}.jar</include>
-									</includes>
-									<filtering>false</filtering>
-								</resource>
-							</resources>
 						</configuration>
 					</execution>
 				</executions>
@@ -216,56 +219,6 @@
 									</manifestEntries>
 								</transformer>
 							</transformers>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>3.1.0</version>
-				<executions>
-					<execution>
-						<id>create-classpath</id>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<target>
-								<delete>
-									<fileset
-										dir="${project.basedir}/sklearn2pmml/resources"
-									>
-										<include name="pmml-converter-testing-*.jar"/>
-										<include name="pmml-python-testing-*.jar"/>
-									</fileset>
-								</delete>
-								<fileset
-									id="classpath"
-									dir="${project.basedir}/sklearn2pmml/resources"
-								>
-									<include name="*.jar"/>
-								</fileset>
-								<pathconvert
-									refid="classpath"
-									pathsep="${line.separator}"
-									property="classpath.txt"
-								>
-									<mapper>
-										<flattenmapper/>
-									</mapper>
-								</pathconvert>
-								<echo
-									file="${project.basedir}/sklearn2pmml/resources/classpath.txt"
-									message="${project.build.finalName}.jar${line.separator}"
-								/>
-								<echo
-									file="${project.basedir}/sklearn2pmml/resources/classpath.txt"
-									append="true"
-									message="${classpath.txt}"
-								/>
-							</target>
 						</configuration>
 					</execution>
 				</executions>
