--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ lxml==5.1.0
 numpy==1.22.4; python_version == '3.8'
 numpy==1.26.4; python_version >= '3.9'
 optbinning==0.19.0
+pcre2==0.4.0
 pandas==1.5.3
 scikit-learn
 scikit-lego==0.7.4
