--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,17 @@
 	</issueManagement>
 
 	<properties>
-		<jpmml-sklearn.version>1.8.6</jpmml-sklearn.version>
+		<jpmml-sklearn.version>1.8.7</jpmml-sklearn.version>
 		<project.build.outputTimestamp>2024-10-28T21:00:00Z</project.build.outputTimestamp>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.jpmml</groupId>
+			<artifactId>pmml-converter</artifactId>
+			<version>1.5.9</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.jpmml</groupId>
 			<artifactId>pmml-sklearn</artifactId>
