--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -11,12 +11,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: [3.8, 3.9, '3.10']
-        sklearn: [1.0.2, 1.1.3, 1.2.2, 1.3.2, '1.4.0']
-        exclude:
-          - python: 3.8
-            sklearn: '1.4.0'
-          - python: '3.10'
+        python: [3.9, '3.10', 3.11, 3.12]
+        sklearn: [1.0.2, 1.1.3, 1.2.2, 1.3.2, 1.4.2, 1.5.2]
 
     steps:
     - uses: actions/checkout@v2
@@ -33,7 +29,7 @@ jobs:
     - run: |
         python -m pip install --upgrade pip
         pip install nose
-        pip install scikit-learn==${{ matrix.sklearn }}
+        pip install --only-binary :all: scikit-learn==${{ matrix.sklearn }}
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - run: |
         nosetests
