--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -13,6 +13,10 @@ jobs:
       matrix:
         python: [3.9, '3.10', 3.11, 3.12]
         sklearn: [1.0.2, 1.1.3, 1.2.2, 1.3.2, 1.4.2, 1.5.2]
+        exclude:
+          - python: '3.10'
+          - python: 3.11
+          - python: 3.12
 
     steps:
     - uses: actions/checkout@v2
