--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -32,8 +32,8 @@ jobs:
           ${{ runner.os }}-
     - run: |
         python -m pip install --upgrade pip
-        pip install nose
+        pip install pytest
         pip install --only-binary :all: scikit-learn==${{ matrix.sklearn }}
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - run: |
-        nosetests
+        pytest
