--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -13,6 +13,15 @@ jobs:
       matrix:
         python: [3.9, '3.10', 3.11, 3.12]
         sklearn: [1.0.2, 1.1.3, 1.2.2, 1.3.2, 1.4.2, 1.5.2]
+        exclude:
+          - python: 3.11
+            sklearn: 1.0.2
+          - python: 3.12
+            sklearn: 1.0.2
+          - python: 3.12
+            sklearn: 1.1.3
+          - python: 3.12
+            sklearn: 1.2.2
 
     steps:
     - uses: actions/checkout@v2
@@ -32,4 +41,4 @@ jobs:
         pip install --only-binary :all: scikit-learn==${{ matrix.sklearn }}
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - run: |
-        pytest
+        python -m pytest
