--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,14 @@ interpret==0.6.1
 joblib==1.3.1
 lightgbm==4.3.0
 lxml==5.1.0
-numpy==1.26.4
+numpy==1.24.4; python_version == '3.8'
+numpy==1.26.4; python_version >= '3.9'
 optbinning==0.19.0
 pcre2==0.4.0
 pandas==1.5.3
 scikit-learn
 scikit-lego==0.7.4
-scikit-tree==0.7.2
+scikit-tree==0.7.2; python_version >= '3.9'
 sklearn-pandas==2.2.0
 statsmodels==0.14.1
 TPOT==0.12.0
