--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -11,9 +11,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: [3.9, '3.10', 3.11, 3.12]
+        python: [3.8, 3.9, '3.10', 3.11, 3.12]
         sklearn: [1.0.2, 1.1.3, 1.2.2, 1.3.2, 1.4.2, 1.5.2]
         exclude:
+          - python: 3.8
+            sklearn: 1.4.2
+          - python: 3.8
+            sklearn: 1.5.2
           - python: 3.11
             sklearn: 1.0.2
           - python: 3.12
@@ -24,17 +28,11 @@ jobs:
             sklearn: 1.2.2
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python }}
-    - uses: actions/cache@v2
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-          ${{ runner.os }}-
+        cache: 'pip'
     - run: |
         python -m pip install --upgrade pip
         pip install pytest
