Updated Java version requirement from 8 to 11

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 	</issueManagement>
 
 	<properties>
+		<jdk.version>11</jdk.version>
 		<jpmml-sklearn.version>1.8.9</jpmml-sklearn.version>
 		<project.build.outputTimestamp>2025-02-01T18:25:00Z</project.build.outputTimestamp>
 	</properties>
@@ -142,8 +143,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.13.0</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -158,6 +159,9 @@
 						</goals>
 						<configuration>
 							<rules>
+								<requireJavaVersion>
+									<version>[11,)</version>
+								</requireJavaVersion>
 								<requireMavenVersion>
 									<version>3.6.3</version>
 								</requireMavenVersion>
