--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
 	<properties>
 		<jdk.version>11</jdk.version>
-		<jpmml-sklearn.version>1.8.9</jpmml-sklearn.version>
+		<jpmml-sklearn.version>1.9.0</jpmml-sklearn.version>
 		<project.build.outputTimestamp>2025-02-01T18:25:00Z</project.build.outputTimestamp>
 	</properties>
 
@@ -47,6 +47,10 @@
 				<exclusion>
 					<groupId>org.jpmml</groupId>
 					<artifactId>pmml-python-testing</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.eclipse.angus</groupId>
+					<artifactId>angus-activation</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
@@ -74,10 +78,6 @@
 				<exclusion>
 					<groupId>org.jpmml</groupId>
 					<artifactId>pmml-converter-testing</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.google.errorprone</groupId>
-					<artifactId>error_prone_annotations</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
