--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ numpy==1.24.4; python_version == '3.8'
 numpy==2.0.2; python_version == '3.9'
 numpy==2.2.3; python_version >= '3.10'
 optbinning==0.19.0
-pcre2==0.4.0
+pcre2==0.4.0; python_version == '3.8'
+pcre2==0.5.2; python_version >= '3.9'
 pandas==2.0.3; python_version == '3.8'
 pandas==2.2.3; python_version >= '3.9'
 scikit-learn
