--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
-CHAID==5.4.1
+CHAID==5.4.2
 dill==0.3.9
-interpret==0.6.1
+interpret==0.6.6; python_version == '3.8'
+interpret==0.6.9; python_version == '3.9'
 joblib==1.4.2
-lightgbm==4.3.0
+lightgbm==4.6.0
 lxml==5.3.1
 numpy==1.24.4; python_version == '3.8'
 numpy==2.0.2; python_version == '3.9'
 numpy==2.2.3; python_version >= '3.10'
-optbinning==0.19.0
+optbinning==0.20.1
 pcre2==0.4.0; python_version == '3.8'
 pcre2==0.5.2; python_version >= '3.9'
 pandas==2.0.3; python_version == '3.8'
 pandas==2.2.3; python_version >= '3.9'
-scikit-learn
-scikit-lego==0.7.4
-scikit-tree==0.7.2; python_version >= '3.9'
+scikit-learn>=1.0
+scikit-lego==0.9.4
+scikit-tree==0.8.0; python_version >= '3.9'
 sklearn-pandas==2.2.0
-statsmodels==0.14.1
-TPOT==0.12.0
-xgboost==2.0.3
+statsmodels==0.14.1; python_version == '3.8'
+statsmodels==0.14.4; python_version >= '3.9'
+TPOT==0.12.1; python_version == '3.8'
+TPOT==0.12.2; python_version >= '3.9'
+xgboost==2.1.4
