--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ pcre2==0.4.0; python_version == '3.8'
 pcre2==0.5.2; python_version >= '3.9'
 pandas==2.0.3; python_version == '3.8'
 pandas==2.2.3; python_version >= '3.9'
-scikit-learn>=1.0
+scikit-learn>=1.0,<=1.5.2
 scikit-lego==0.9.4
 scikit-tree==0.8.0; python_version >= '3.9'
 sklearn-pandas==2.2.0
