--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -12,12 +12,18 @@ jobs:
       fail-fast: false
       matrix:
         python: [3.8, 3.9, '3.10', 3.11, 3.12]
-        sklearn: [1.0.2, 1.1.3, 1.2.2, 1.3.2, 1.4.2, 1.5.2]
+        sklearn: [1.0.2, 1.1.3, 1.2.2, 1.3.2, 1.4.2, 1.5.2, 1.6.1, 1.7.0]
         exclude:
           - python: 3.8
             sklearn: 1.4.2
           - python: 3.8
             sklearn: 1.5.2
+          - python: 3.8
+            sklearn: 1.6.1
+          - python: 3.8
+            sklearn: 1.7.0
+          - python: 3.9
+            sklearn: 1.7.0
           - python: 3.11
             sklearn: 1.0.2
           - python: 3.12
