--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 	</issueManagement>
 
 	<properties>
-		<jpmml-sklearn.version>1.9.18</jpmml-sklearn.version>
+		<jpmml-sklearn.version>1.9.19</jpmml-sklearn.version>
 		<project.build.outputTimestamp>2025-09-28T14:30:00Z</project.build.outputTimestamp>
 	</properties>
 
@@ -109,6 +109,12 @@
 			<groupId>org.jpmml</groupId>
 			<artifactId>telemetry-client</artifactId>
 			<version>1.0.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.errorprone</groupId>
+					<artifactId>error_prone_annotations</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
