--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,11 @@ pcre2==0.4.0; python_version == '3.8'
 pcre2==0.5.2; python_version >= '3.9'
 pandas==2.0.3; python_version == '3.8'
 pandas==2.2.3; python_version >= '3.9'
-scikit-learn>=1.0,<=1.7.2
+scikit-learn>=1.0,<=1.8.0
 scikit-lego==0.9.4
 scikit-tree==0.8.0; python_version >= '3.9'
 scipy<=1.15.3
+sklearn-compat==0.1.5
 sklearn-pandas==2.2.0
 statsmodels==0.14.1; python_version == '3.8'
 statsmodels==0.14.5; python_version >= '3.9'
