--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -1,7 +1,8 @@
 .level=INFO
 
 handlers=java.util.logging.ConsoleHandler
+
 java.util.logging.ConsoleHandler.level=INFO
-java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
+java.util.logging.ConsoleHandler.formatter=org.jpmml.sklearn.SkLearnFormatter
 
 java.util.logging.SimpleFormatter.format=%4$s: %5$s%6$s%n
